--- a/src/styles/3d-animations.css
+++ b/src/styles/3d-animations.css
@@ -146,7 +146,7 @@
 
 @keyframes particleMove {
   0% {
-    transform: translateX(-50px) translateY(100vh) translateZ(0px) rotateX(0deg) rotateY(0deg);
+    transform: translateX(0px) translateY(100vh) translateZ(0px) rotateX(0deg) rotateY(0deg);
     opacity: 0;
   }
   10% {
@@ -156,7 +156,7 @@
     opacity: 1;
   }
   100% {
-    transform: translateX(50px) translateY(-100vh) translateZ(100px) rotateX(360deg) rotateY(180deg);
+    transform: translateX(0px) translateY(-100vh) translateZ(100px) rotateX(360deg) rotateY(180deg);
     opacity: 0;
   }
 }
